// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Border snapshots > all platforms > Borders.kt 1`] = `
"// Borders.kt
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

package com.example.design

import androidx.compose.foundation.BorderStroke
import androidx.compose.ui.graphics.Color
import androidx.compose.ui.unit.dp

object Borders {
    val borderThin = BorderStroke(1.dp, Color(0xFFCCCCCC))
}

"
`;

exports[`Border snapshots > all platforms > Borders.scss 1`] = `
"// Borders.scss
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

$border-border-thin: 1px solid #cccccc;

:root {
  --border-border-thin: #{$border-border-thin};
}

"
`;

exports[`Border snapshots > all platforms > Borders.swift 1`] = `
"// Borders.swift
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

import SwiftUI

public struct BorderToken {
  public let width: CGFloat
  public let color: Color
}

public extension BorderToken {
  static let borderThin = BorderToken(width: 1, color: Color(hex: 0xCCCCCC))
}

"
`;

exports[`CSS snapshots > media-query structure > colors.css-media-query 1`] = `
"/* colors.css */
/* Auto-generated from Figma Variables — DO NOT EDIT */
/* Generated: [TIMESTAMP]

:root {
  /* Fill */
  --fill-static-white: var(--grey-0);
  /* Text */
  --text-primary: var(--grey-750);
}

@media (prefers-color-scheme: dark) {
  :root {
    --text-primary: var(--grey-50);
  }
}

"
`;

exports[`CSS snapshots > media-query structure > primitives.css-media-query 1`] = `
"/* primitives.css */
/* Auto-generated from Figma Variables — DO NOT EDIT */
/* Generated: [TIMESTAMP]

:root {
  /* grey */
  --grey-0: #ffffff;
  --grey-50: #f5f5f5;
  --grey-750: #1d1d1d;
}

"
`;

exports[`CSS snapshots > modern structure > colors.css-modern 1`] = `
"/* colors.css */
/* Auto-generated from Figma Variables — DO NOT EDIT */
/* Generated: [TIMESTAMP]

:root {
  color-scheme: light dark;

  /* Fill */
  --fill-static-white: var(--grey-0);
  /* Text */
  --text-primary: light-dark(var(--grey-750), var(--grey-50));
}

"
`;

exports[`CSS snapshots > modern structure > primitives.css-modern 1`] = `
"/* primitives.css */
/* Auto-generated from Figma Variables — DO NOT EDIT */
/* Generated: [TIMESTAMP]

:root {
  /* grey */
  --grey-0: #ffffff;
  --grey-50: #f5f5f5;
  --grey-750: #1d1d1d;
}

"
`;

exports[`Kotlin snapshots > default conventions > Colors.kt 1`] = `
"// Colors.kt
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

package com.example.design

import androidx.compose.material3.ColorScheme
import androidx.compose.material3.darkColorScheme
import androidx.compose.material3.lightColorScheme
import androidx.compose.ui.graphics.Color

// Primitive color palette
object Primitives {
    // Grey
    val grey0 = Color(0xFFFFFFFF)
    val grey50 = Color(0xFFF5F5F5)
    val grey750 = Color(0xFF1D1D1D)
}

// Light theme semantic tokens
object LightColorTokens {
    val textPrimary = Primitives.grey750
    val fillStaticWhite = Primitives.grey0
}

// Dark theme semantic tokens
object DarkColorTokens {
    val textPrimary = Primitives.grey50
    val fillStaticWhite = Primitives.grey0
}

// Material3 ColorScheme builders — plug into MaterialTheme
// TODO: map your semantic tokens to Material3 color roles below.
@Suppress("UnusedReceiverParameter")
fun lightColors(): ColorScheme = lightColorScheme(
    // primary           = LightColorTokens.fillPrimary,
    // onPrimary         = LightColorTokens.textOnPrimary,
    // background        = LightColorTokens.backgroundDefault,
    // surface           = LightColorTokens.backgroundSurface,
    // onSurface         = LightColorTokens.textPrimary,
    // outline           = LightColorTokens.strokeDefault,
)

@Suppress("UnusedReceiverParameter")
fun darkColors(): ColorScheme = darkColorScheme(
    // primary           = DarkColorTokens.fillPrimary,
    // onPrimary         = DarkColorTokens.textOnPrimary,
    // background        = DarkColorTokens.backgroundDefault,
    // surface           = DarkColorTokens.backgroundSurface,
    // onSurface         = DarkColorTokens.textPrimary,
    // outline           = DarkColorTokens.strokeDefault,
)

"
`;

exports[`SCSS snapshots > inline structure > Colors.scss-inline 1`] = `
"@use './Primitives' as *;

// Colors.scss
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

// Fill colors
$fill-static-white: var(--fill-static-white, $grey-0);

// Text colors
$text-primary: var(--text-primary, light-dark($grey-750, $grey-50));

"
`;

exports[`SCSS snapshots > inline structure > Primitives.scss-inline 1`] = `
"// Primitives.scss
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

// grey
$grey-0: #ffffff;
$grey-50: #f5f5f5;
$grey-750: #1d1d1d;

"
`;

exports[`SCSS snapshots > media-query structure > Colors.scss-media-query 1`] = `
"@use './Primitives' as *;

// Colors.scss
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

:root {
  // Fill colors
  --fill-static-white: #{$grey-0};

  // Text colors
  --text-primary: #{$grey-750};

}

@media (prefers-color-scheme: dark) {
  :root {
    --text-primary: #{$grey-50};
  }
}

// SCSS variable aliases
// Fill colors
$fill-static-white: var(--fill-static-white);

// Text colors
$text-primary: var(--text-primary);

"
`;

exports[`SCSS snapshots > media-query structure > Primitives.scss-media-query 1`] = `
"// Primitives.scss
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

// grey
$grey-0: #ffffff;
$grey-50: #f5f5f5;
$grey-750: #1d1d1d;

"
`;

exports[`SCSS snapshots > modern structure (best practices) > Colors.scss-modern 1`] = `
"@use './Primitives' as *;

// Colors.scss
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

// @property typed declarations — enables CSS transitions on color tokens
// and provides browser DevTools type info. Requires: color-scheme: light dark.
// Fill colors
@property --fill-static-white {
  syntax: '<color>';
  inherits: true;
  initial-value: transparent;
}

// Text colors
@property --text-primary {
  syntax: '<color>';
  inherits: true;
  initial-value: transparent;
}

:root {
  color-scheme: light dark;

  // Fill colors
  --fill-static-white: #{$grey-0};

  // Text colors
  --text-primary: light-dark(#{$grey-750}, #{$grey-50});

}

// SCSS variable aliases — reference in .scss files; compile to var(--token-name)
// Fill colors
$fill-static-white: var(--fill-static-white);

// Text colors
$text-primary: var(--text-primary);

"
`;

exports[`SCSS snapshots > modern structure (best practices) > Primitives.scss-modern 1`] = `
"// Primitives.scss
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

// grey
$grey-0: #ffffff;
$grey-50: #f5f5f5;
$grey-750: #1d1d1d;

"
`;

exports[`Shadow snapshots > all platforms > Shadows.kt 1`] = `
"// Shadows.kt
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

package com.example.design

import androidx.compose.ui.Modifier
import androidx.compose.ui.draw.shadow
import androidx.compose.ui.graphics.Color
import androidx.compose.ui.unit.dp
import androidx.compose.foundation.shape.RoundedCornerShape

data class ShadowSpec(
    val elevation: androidx.compose.ui.unit.Dp,
    val color: Color,
)

object Shadows {
    val ElevationLarge = ShadowSpec(elevation = 24.dp, color = Color(0x33000000))
    val ElevationSmall = ShadowSpec(elevation = 3.dp, color = Color(0x1F000000))
}

"
`;

exports[`Shadow snapshots > all platforms > Shadows.scss 1`] = `
"// Shadows.scss
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

$shadow-elevation-large: 0px 10px 24px -4px #00000033;
$shadow-elevation-small: 0px 1px 3px 0px #0000001f;

:root {
  --shadow-elevation-large: #{$shadow-elevation-large};
  --shadow-elevation-small: #{$shadow-elevation-small};
}

"
`;

exports[`Shadow snapshots > all platforms > Shadows.swift 1`] = `
"// Shadows.swift
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

import SwiftUI

public struct ShadowToken {
  public let color: Color
  public let radius: CGFloat
  public let x: CGFloat
  public let y: CGFloat
}

public extension ShadowToken {
  static let elevationLarge = ShadowToken(color: Color(hex: 0x00000033), radius: 24, x: 0, y: 10)
  static let elevationSmall = ShadowToken(color: Color(hex: 0x0000001F), radius: 3, x: 0, y: 1)
}

// MARK: - Hex Color Init
private extension Color {
  init(hex: UInt64) {
    let hasAlpha = hex > 0xFFFFFF
    let r, g, b, a: Double
    if hasAlpha {
      r = Double((hex >> 24) & 0xFF) / 255
      g = Double((hex >> 16) & 0xFF) / 255
      b = Double((hex >>  8) & 0xFF) / 255
      a = Double( hex        & 0xFF) / 255
    } else {
      r = Double((hex >> 16) & 0xFF) / 255
      g = Double((hex >>  8) & 0xFF) / 255
      b = Double( hex        & 0xFF) / 255
      a = 1.0
    }
    self.init(.sRGB, red: r, green: g, blue: b, opacity: a)
  }
}

"
`;

exports[`Spacing snapshots > SCSS + TS > Spacing.scss 1`] = `
"// Spacing.scss
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

// Spacing scale — SCSS variables
$spacing-4: 4px;
$spacing-8: 8px;
$spacing-16: 16px;

// Spacing scale — CSS custom properties (for JS access and runtime use)
:root {
  --spacing-4: #{$spacing-4}; // 4px
  --spacing-8: #{$spacing-8}; // 8px
  --spacing-16: #{$spacing-16}; // 16px
}

"
`;

exports[`Spacing snapshots > SCSS + TS > Spacing.ts 1`] = `
"// Spacing.ts
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

// Spacing scale (px)
export const SPACING_4 = '4px' as const;
export const SPACING_8 = '8px' as const;
export const SPACING_16 = '16px' as const;

"
`;

exports[`Spacing snapshots > with type annotations > Spacing.ts-typed 1`] = `
"// Spacing.ts
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

// Spacing scale (px)
export const SPACING_4: string = '4px' as const;
export const SPACING_8: string = '8px' as const;
export const SPACING_16: string = '16px' as const;

"
`;

exports[`Swift snapshots > default conventions > Colors.swift 1`] = `
"// Colors.swift
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

import SwiftUI

// MARK: - Hex Color Init
private extension Color {
  init(hex: UInt64) {
    let hasAlpha = hex > 0xFFFFFF
    let r, g, b, a: Double
    if hasAlpha {
      r = Double((hex >> 24) & 0xFF) / 255
      g = Double((hex >> 16) & 0xFF) / 255
      b = Double((hex >>  8) & 0xFF) / 255
      a = Double( hex        & 0xFF) / 255
    } else {
      r = Double((hex >> 16) & 0xFF) / 255
      g = Double((hex >>  8) & 0xFF) / 255
      b = Double( hex        & 0xFF) / 255
      a = 1.0
    }
    self.init(.sRGB, red: r, green: g, blue: b, opacity: a)
  }
}

// MARK: - Dynamic Color Init
private extension Color {
  init(light: Color, dark: Color) {
    #if canImport(UIKit)
    self.init(uiColor: UIColor { trait in
      trait.userInterfaceStyle == .dark
        ? UIColor(dark)
        : UIColor(light)
    })
    #elseif canImport(AppKit)
    self.init(nsColor: NSColor(name: nil) { appearance in
      appearance.bestMatch(from: [.darkAqua, .vibrantDark]) != nil
        ? NSColor(dark)
        : NSColor(light)
    })
    #else
    self = light
    #endif
  }
}

// MARK: - Primitives
public extension Color {
  // grey
  static let grey0 = Color(hex: 0xFFFFFF)
  static let grey50 = Color(hex: 0xF5F5F5)
  static let grey750 = Color(hex: 0x1D1D1D)
}

// MARK: - Semantic Colors
public extension Color {
  // Fill
  static let fillStaticWhite = Color.grey0
  // Text
  static let textPrimary = Color(light: .grey750, dark: .grey50)
}

"
`;

exports[`TS snapshots > best practices > Colors.ts-bp 1`] = `
"import * as PRIMITIVES from './Primitives';

// Colors.ts
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

// Fill colors
export const FILL_STATIC_WHITE: string = \`var(--fill-static-white, \${PRIMITIVES.GREY_0})\` as const;

// Text colors
export const TEXT_PRIMARY: string = \`var(--text-primary, light-dark(\${PRIMITIVES.GREY_750}, \${PRIMITIVES.GREY_50}))\` as const;

"
`;

exports[`TS snapshots > best practices > Primitives.ts-bp 1`] = `
"// Primitives.ts
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

// Grey color family
export const GREY_0: string = '#ffffff' as const;
export const GREY_50: string = '#f5f5f5' as const;
export const GREY_750: string = '#1d1d1d' as const;

"
`;

exports[`TS snapshots > detected conventions > Colors.ts-detected 1`] = `
"import * as PRIMITIVES from './Primitives';

// Colors.ts
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

// Fill colors
export const FILL_STATIC_WHITE = \`var(--fill-static-white, \${PRIMITIVES.GREY_0})\` as const;

// Text colors
export const TEXT_PRIMARY = \`var(--text-primary, light-dark(\${PRIMITIVES.GREY_750}, \${PRIMITIVES.GREY_50}))\` as const;

"
`;

exports[`TS snapshots > detected conventions > Primitives.ts-detected 1`] = `
"// Primitives.ts
// Auto-generated from Figma Variables — DO NOT EDIT
// Generated: [TIMESTAMP]

// Grey color family
export const GREY_0 = '#ffffff' as const;
export const GREY_50 = '#f5f5f5' as const;
export const GREY_750 = '#1d1d1d' as const;

"
`;
